--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.js'></script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css' rel='stylesheet' />
     <link rel="stylesheet" href="style.css">
+   
 
     <title>Corona Map</title>
 </head>
@@ -14,10 +15,15 @@
     <div id='map' style='width: 100vw; height: 100vh;'></div>
 </body>
     <script>
+
         mapboxgl.accessToken = 'pk.eyJ1Ijoic2FkaWdhIiwiYSI6ImNrcjUydTRiZDMxb3QycXFhdWZzY2ExaTEifQ.xPs3DX5bAGEzwRXiDcXW6A';
+        
         var map = new mapboxgl.Map({
             container: 'map',
-            style: 'mapbox://styles/mapbox/dark-v10'
+            style: 'mapbox://styles/mapbox/dark-v10',
+            zoom: 1.25
+            
         });
     </script>
+    <script src="index.js"></script>
 </html>
