halfway done ig

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <title>Corona Map</title>
 </head>
 <body>
+    <div class="title">
+        Covid 19 Map 
+    </div>
     <div id='map' style='width: 100vw; height: 100vh;'></div>
 </body>
     <script>
